kubernetes/apps/media/metube/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: MeTube
    gethomepage.dev/group: Media
    gethomepage.dev/icon: youtube.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "metube.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: auth
          port: 4180
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              group: ""
              kind: Service
              name: oauth2-proxy
              namespace: auth
              port: 4180
            http:
              allowedHeaders:
                - accept
                - authorization
                - cookie
                - x-forwarded-host
                - x-forwarded-proto
                - x-forwarded-uri
              allowedResponseHeaders:
                - x-auth-request-email
                - x-auth-request-groups
                - x-auth-request-preferred-username
                - x-auth-request-user
      backendRefs:
        - group: ""
          kind: Service
          name: metube
          port: 8081
